# bakery

./: .env.dev  .pre-commit-config.yaml  .zshrc  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
.github/redis/: Dockerfile
.github/workflows/: checks.yml
bakery/: __main__.py  config.py
bakery/adapters/database/: __main__.py  config.py  di.py  tables.py  uow.py
bakery/adapters/pdf/: __init__.py  di.py  order_report.py
bakery/application/: exceptions.py
bakery/application/constants/: admin_contact.py  cart.py  common.py  order_schedule.py
bakery/domains/: di.py
bakery/domains/entities/: admin_contact.py  cart.py  common.py  delivery_cost.py  feedback_group.py  order.py  order_payment.py  order_schedule.py  pickup_address.py  product.py  user.py
bakery/domains/services/: admin_contact.py  cart.py  delivery_cost.py  feedback_group.py  order.py  order_chedule.py  order_payment.py  order_schedule.py  pickup_address.py  product.py  user.py
bakery/domains/utils/: delivery_price.py  get_available_delivery_dates.py  timezone.py  validate_order_schedule.py
bakery/presenters/bot/: config.py  di.py  exception_handlers.py  handlers.py  router.py  service.py
bakery_bot/: __main__.py
bakery_bot/adapters/database/: __main__.py  di.py  tables.py  uow.py
bakery_bot/adapters/http/: di.py
bakery_bot/application/: config.py  exceptions.py
bakery_bot/common/: config.py  exceptions.py
bakery_bot/common/entities/: photo.py  (+2 more)
bakery_bot/domains/: di.py  file_service.py
docs/: db.puml
tests/: conftest.py  utils.py
(+272 files in other folders)
